# longarc

./: .env.example  README.md  pyproject.toml
.codex/skills/longarc-development/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: pr-metadata-autofill.yml  quality-gate.yml
config/: config.example.yaml
docs/: plan.md  track.md
scripts/: run_backtest.sh  run_paper.sh
scripts/ci/: validate_governance.sh  validate_pr_metadata.py
src/longarc/: __init__.py  cli.py
src/longarc/core/: __init__.py  config.py  logging.py
src/longarc/data/: __init__.py  store.py
src/longarc/data/providers/: __init__.py  base.py  local_parquet.py  polygon.py  registry.py
tests/: test_cli_data.py  test_data_store.py  test_package_smoke.py  test_polygon_provider.py  test_pr_metadata_validation.py
